# AkLisp

./: .gitignore  .gitlab-ci.yml  .travis.yml  AltMakefile  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.alt  README.md  aklisp  aklisp.c  aklisp.h  cmake_install.cmake  config.h  config.h.alt  config.h.in  gc.c  index.html  install_manifest.txt  lexer.c  lib.c  libaklisp_shared.so.0.1.0  libaklisp_shared.so.1  main.c  memory.c  os_other.c  os_unix.c  params.json  parser.c
CMake/: FindGC.cmake
etc/: aklisp-module.pc  libaklisp-static.pc  libaklisp.pc
examples/: arg_eval.c  args.lsp  avg.lsp  create_file.lsp  fact.lsp  fib-fn.lsp  fib.lsp  fiblist.lsp  fibo.lsp  fibomap.lsp  greeter-fn.lsp  greeter.lsp  hello.lsp  how_old.lsp  list.lsp  list_eval.c  love_ny.lsp  to_xml.c  water.lsp  while.lsp
modules/: Makefile  Makefile.mods  README  dir.c  file.c  hello.c  modules.conf
modules/curses/: Makefile  curses.alm  curses.c
modules/hello/: hello.c
src/: Makefile  Makefile.objs  aklisp.c  aklisp.h  compile.c  gc.c  lexer.c  lib.c  lib_file.c  lib_spec.c  list.c  main.c  module.c  os_other.c  os_unix.c  os_win.c  parser.c  types.c  util.c  vector.c
stylesheets/: stylesheet.css
tests/: Makefile  dummy.c  dummy.c.sample  list.c  run_tests.sh  vector.c
tests/tester/: build_checker.sh  tester.c  tester.h
